--- a/index2.org
+++ b/index2.org
@@ -6,6 +6,384 @@
 #+LATEX: \tableofcontents
 -----
 
+* Data Documentation
+** 2015-03-19-r-eml-to-mitigate-risks-in-morpho-metacat-data-publishing
+
+
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2015-03-19-r-eml-to-mitigate-risks-in-morpho-metacat-data-publishing.md :exports none :eval no :padline no
+---
+name: r-eml-to-mitigate-risks-in-morpho-metacat-data-publishing
+layout: post
+title: Using the R EML software to mitigate risks in Morpho and Metacat data publishing
+date: 2015-03-19
+categories:
+- morpho
+- data documentation
+---
+
+# Introduction
+
+- Over the last few months I have used software called Metacat as a Data Portal and Repository.  Metacat is server software which has been
+developed by the Knowledge Network for Biocomplexity (KNB). 
+- Metacat
+conforms to the Ecological Metadata Language (EML) Standard ([https://knb.ecoinformatics.org/#external//emlparser/docs/index.html](https://knb.ecoinformatics.org/#external//emlparser/docs/index.html)).  
+- KNB also develop another software package called Morpho to be used by Ecologists to document their data ([https://knb.ecoinformatics.org/#tools/morpho](https://knb.ecoinformatics.org/#tools)).
+- Morpho can be used to send the data and metadata documents to be published on a Metacat portal. 
+- KNB’s software is used internationally by the Data
+Observation Network for Earth (DataONE) nodes, the United States Long
+Term Ecological Research (US LTER) network and the International Long
+Term Ecological Research (ILTER) network. 
+- Additionally, the Australian Long Term Ecological Research Network 
+Data Portal ([www.ltern.org.au/knb/](http://www.ltern.org.au/knb/)), Australian SuperSites Network and
+Australian Centre for Ecological Analysis and Synthesis used
+the same underlying technology to publish data packages.
+- The Metacat system is great for a data repository but unfortunately (in my experience) the Morpho software package has repeatedly hampered data processing and increased risks of inadvertently publishing data with errors. 
+- My colleagues and I workaround these problems using a lot of different 'fixes' for the different problems.
+- Fortunately there is an alternative to Morpho in the R statistical software environment called the R-EML package ([https://github.com/ropensci/EML](https://github.com/ropensci/EML)).  This provides a library of functions used in the R language to generate and parse EML files.
+- This new workflow mitigates some of the risks of the Morpho software by ensuring the data related steps of the workflow are conducted in the R environment for statical computing.
+- However, some Issues remain in that this requires a fairly specialised computing environment with various Linux libraries configured appropriately
+
+
+# Results
+ 
+- I generate EML metadata using REML in the workflow shown in the figure below.
+
+![altext](/images/workflow-rmd-md.png)
+
+<p></p>
+
+- Image adapted from [http://kieranhealy.org/blog/archives/2014/01/23/plain-text/](http://kieranhealy.org/blog/archives/2014/01/23/plain-text/)
+
+
+#+end_src
+
+** TODO xxx-adding-value-labels-to-reml-boilerplate
+*** adding-value-labels-to-reml-boilerplate-header
+#+begin_src R :tangle no :exports none :eval no :padline no
+  ---
+  name: adding-value-labels-to-reml-boilerplate
+  layout: post
+  title: adding-value-labels-to-reml-boilerplate
+  date: 2014-08-22
+  categories:
+  -
+  ---
+  
+  #### Code:adding-value-labels-to-reml-boilerplate
+  #For sake of argument, imagine a data.frame looking something like this:
+  
+  
+  dat = data.frame(river=c("SAC", "SAC", "AM"),
+                   spp = c("king", "king", "ccho"),
+                   stg = c("smolt", "parr", "smolt"),
+                   ct =  c(293, 410, 210L))
+  
+  xtable::xtable(dat)
+  
+  
+  
+  #In case our column header abbreviations are not obvious to others (or our future selves), we take a moment to define them:
+  
+  
+  col_metadata = c(river = "http://dbpedia.org/ontology/River",
+                   spp = "http://dbpedia.org/ontology/Species",
+                   stg = "Life history stage",
+                   ct = "count")
+  
+  
+  
+  # Define the units used in each column.  In the case of factors, we define the abbreviations in a named string.
+  
+  
+  unit_metadata =
+    list(river = c(SAC = "The Sacramento River", AM = "The American River"),
+         spp = c(king = "King Salmon", ccho = "Coho Salmon"),
+         stg = c(parr = "third life stage", smolt = "fourth life stage"),
+         ct = "number")
+  
+  # automated?
+  #dat <- dat[,-4]
+  dat
+  
+#+end_src
+
+*** COMMENT reml_boilerplate2-code
+#+name:get_vals
+#+begin_src R :session *R* :tangle R/reml_boilerplate.r :exports none :eval no
+  reml_boilerplate <- function(.dataframe){
+  strng <- list()
+  for(i in 1:ncol(.dataframe)){
+    # i = 6
+    .variable <- names(.dataframe)[i]
+    #.dataframe[,.variable]
+      if(is.character(.dataframe[ ,.variable])){
+        .dataframe[,.variable]  <- factor(.dataframe[,.variable])
+      }
+  
+    if(is.factor(.dataframe[,.variable])){
+      x <- .dataframe[,.variable]
+      vals <-  names(table(x))
+      # symbols may pollute the string to parse
+      vals <- make.names(vals)
+      vals <- tolower(vals)  
+      vals <- gsub("\\.","_",vals)
+      vals <- gsub("_+","_",vals)    
+      v <- .variable
+      #v
+      strng[[.variable]] <- paste(
+      v, ' = c(',
+      paste(vals, sep = '', collapse = ' = "TBA",')
+      ,' = "TBA")', sep = '')
+    } else if(is.numeric(.dataframe[,.variable])){
+      v <- .variable
+      strng[[.variable]] <- paste(v,' = "number"',sep='')
+  #    strng[[.variable]] <- '"number"'
+      
+    } else if(
+      !all(is.na(as.Date(as.character(na.omit(.dataframe[,.variable])), origin = "1970-01-01")))
+      ){
+      v <- .variable    
+      strng[[.variable]] <- paste(v,' = "YYYY-MM-DD"',sep='')
+  #    strng[[.variable]] <- '"YYYY-MM-DD"'
+  
+    } else if (all(is.na(.dataframe[ ,.variable]))){
+      v <- .variable        
+      strng[[.variable]] <- paste(v,' = "', names(.dataframe)[i], '"', sep='')
+    }
+  }  
+  #strng
+  strng2 <- ""
+  for(n in 1:(length(strng)-1)){
+    strng2 <- paste(strng2, strng[[n]], ",\n")
+  }
+  strng2 <- paste(strng2, strng[[length(strng)]], "\n")
+  #cat(strng2)
+  strng3 <- paste("
+  unit_metadata =
+    list(",strng2,")", sep = "")
+  #cat(strng3)
+  eval(parse(text = strng3))
+  #unit_metadata
+  return(unit_metadata)
+  }
+  
+  #u1 <- get_vals(analyte)
+  #u1
+      
+#+end_src
+
+*** COMMENT reml_boilerplate1-code
+#+name:reml_boilerplate
+# begin_src R :session *R* :tangle R/reml_boilerplate.r :exports reports :eval no
+#+begin_src R :session *R* :tangle no :exports reports :eval no
+
+  ################################################################
+  # name:reml_boilerplate
+   
+  # func
+  ## if(!require(EML)) {
+  ##   require(devtools)
+  ##   install_github("EML", "ropensci")
+  ##   } 
+  ## require(EML)
+  
+  reml_boilerplate <- function(data_set, outfile = NA, created_by = "Ivan Hanigan <ivanhanigan@gmail.com>", data_dir = getwd(), titl = NA)
+  {
+  
+    # next create a list from the data
+    unit_defs <- list()
+    for(i in 1:ncol(data_set))
+      {
+        # i = 4
+        if(is.numeric(data_set[,i])){
+          unit_defs[[i]] <- "number"
+        } else {
+          unit_defs[[i]] <- names(data_set)[i]
+        }
+      }
+  
+  # print helpful comments
+  cat(
+  sprintf('
+  # you just got a cheater\'s unit_defs
+  # we can get the col names easily
+  col_defs <- names(dat)
+  # then create a dataset with metadata
+  ds <- data.set(dat,
+                 col.defs = col_defs,
+                 unit.defs = unit_defs
+                 )
+  # now write EML metadata file
+  eml_config(creator="%s")
+  eml_write(ds,
+            file = "%s",
+            title = "%s"
+            )
+  
+  # now your metadata has been created
+  # if you want to add this to morpho and metacat it will needs something like
+  </dataFormat>
+    <distribution scope="document">
+      <online>
+        <url function="download">ecogrid://knb/hanigan.34.1</url>
+      </online>
+    </distribution>
+  </physical>', created_by, outfile, titl)
+  )
+  
+  
+    return(unit_defs)
+  
+   }
+#+end_src
+*** COMMENT reml_boilerplate3-code
+#+name:get_vals
+#+begin_src R :session *R* :tangle R/reml_boilerplate3.r :exports none :eval no
+  
+  reml_boilerplate3 <- function(.dataframe, enumerated = NA){
+  strng <- list()
+  for(i in 1:ncol(.dataframe)){
+  # i = 1
+    .variable <- names(.dataframe)[i]
+    #.dataframe[,.variable]
+      if(is.character(.dataframe[ ,.variable])){
+        .dataframe[,.variable]  <- factor(.dataframe[,.variable])
+      }
+  
+    if(is.factor(.dataframe[,.variable])  & i %in% enumerated){
+      x <- .dataframe[,.variable]
+      vals <-  names(table(x))
+      # symbols may pollute the string to parse
+      vals <- make.names(vals)
+      vals <- tolower(vals)  
+      vals <- gsub("\\.","_",vals)
+      vals <- gsub("_+","_",vals)    
+      v <- .variable
+      #v
+      strng[[.variable]] <- paste(
+      v, ' = c(',
+      paste(vals, sep = '', collapse = ' = "TBA",')
+      ,' = "TBA")', sep = '')
+    } else if(is.factor(.dataframe[,.variable])){
+      
+      strng[[.variable]] <- paste(
+        .variable, ' = "TBA"', sep = ''
+        )
+  
+    } else if(is.numeric(.dataframe[,.variable])){
+      v <- .variable
+      strng[[.variable]] <- paste(v,' = "number"',sep='')
+  #    strng[[.variable]] <- '"number"'
+      
+    } else if(
+      !all(is.na(as.Date(as.character(na.omit(.dataframe[,.variable])), origin = "1970-01-01")))
+      ){
+      v <- .variable    
+      strng[[.variable]] <- paste(v,' = "YYYY-MM-DD"',sep='')
+  #    strng[[.variable]] <- '"YYYY-MM-DD"'
+  
+    } else if (all(is.na(.dataframe[ ,.variable]))){
+      v <- .variable        
+      strng[[.variable]] <- paste(v,' = "', names(.dataframe)[i], '"', sep='')
+    }
+  }  
+  #strng
+  strng2 <- ""
+  for(n in 1:(length(strng)-1)){
+    strng2 <- paste(strng2, strng[[n]], ",\n")
+  }
+  strng2 <- paste(strng2, strng[[length(strng)]], "\n")
+  #cat(strng2)
+  strng3 <- paste("
+  unit_metadata =
+    list(",strng2,")", sep = "")
+  #cat(strng3)
+  eval(parse(text = strng3))
+  #unit_metadata
+  return(unit_metadata)
+  }
+  
+  #u1 <- get_vals(analyte)
+  #u1
+      
+#+end_src
+
+
+*** reml_boilerplate-test-code
+#+name:reml_boilerplate-test
+#+begin_src R :session *R* :tangle no :exports reports :eval no
+  ################################################################
+  # name:reml_boilerplate-test
+  library(EML)
+  require(devtools)
+  load_all()
+  #require(disentangle)
+  fpath <- system.file("extdata/civst_gend_sector_additional_variables.csv", package = "disentangle")
+  analyte <- read.csv(fpath, colClasses=c(ordinal_variable = "character"))
+  analyte <- read.csv(fpath, stringsAsFactor = F)
+  
+  str(analyte)
+  analyte$datevar <- as.Date(analyte$datevar)
+  analyte$ordinal_variable <- as.character(analyte$ordinal_variable)
+  analyte$fractions <- sample(rnorm(1000,0.1,0.1), nrow(analyte))
+  
+  str(analyte)
+  head(analyte)
+  unit_defs <- reml_boilerplate(
+    data_set = analyte,
+    created_by = "Ivan Hanigan <ivanhanigan@gmail.com>",
+    titl = "civst_gend_sector_full",
+    outfile = 'testing1234'
+    )
+  unit_defs
+  analyte2 <- analyte
+  names(analyte)
+  #analyte <- analyte2[,-c(6)]
+  unit_defs <- reml_boilerplate2(analyte)
+  unit_defs
+  
+  unit_defs <- reml_boilerplate3(analyte, enumerated = c(1,2,3,8))
+  unit_defs
+  
+  
+  
+  
+    # we can get the col names easily
+    col_defs <- names(analyte)
+    # then create a dataset with metadata
+    ds <- data.set(analyte,
+                   col.defs = col_defs,
+                   unit.defs = unit_defs
+                   )
+    # now write EML metadata file
+    eml_config(creator="TBA <fakeaddress@gmail.com>")
+  outfile <- "testingAbcd12234.csv"
+  str(ds)
+    ## eml_write(ds,
+    ##           file = gsub(".csv", "_eml_skeleton.xml", outfile),
+    ##           title = gsub(".csv", "", outfile)
+    ##           )
+  ## [1] "testingAbcd12234_eml_skeleton.xml"
+  ## Warning message:
+  ## In `[[<-.data.frame`(`*tmp*`, i, value = c("2013-09-09/01/13", "2013-09-09/01/13",  :
+  ##   Setting class(x) to NULL;   result will no longer be an S4 object
+  ## >
+  eml_write(analyte,
+            col.defs = col_defs,
+            unit.defs = unit_defs,
+            creator="TBA <fakeaddress@gmail.com>",
+            file = gsub(".csv", "_eml_skeleton.xml", outfile)
+            )
+  
+  tempfile <- dir(pattern="^data_table_")
+  tempfile
+  file.rename(tempfile, outfile)
+  # rename the CSV file.
+  
+  # dir("data")
+#+end_src
+
+
 * Data Operation
 *** COMMENT aggregate-list-of-dfs
 #+name:aggregate
