add fix newnode

--- a/index2.org
+++ b/index2.org
@@ -2058,7 +2058,7 @@ query can be db.dataset.contact.like('Lach%')
     graph = 'nodes', newgraph=F, notes=F, code=NA, ttype=NA, plot = T,
     rgraphviz = F
     ){
-    if(rgraphviz = T){
+    if(rgraphviz){
     # USAGE
     # nodes <- newnode(  # adds to a graph called nodes
     # name = 'aquire the raw data'  # the name of the node being added 
