added pasting together and return

--- a/index2.org
+++ b/index2.org
@@ -2055,7 +2055,8 @@ query can be db.dataset.contact.like('Lach%')
     ,
     desc = "some (potentially) long descriptive text saying what this step is about and why and how"
     ,
-    graph = 'nodes', newgraph=F, notes=F, code=NA, ttype=NA, plot = T,
+    graph = 'nodes'
+    , newgraph=F, notes=F, code=NA, ttype=NA, plot = T,
     rgraphviz = F
     ){
     if(rgraphviz){
@@ -2118,11 +2119,15 @@ query can be db.dataset.contact.like('Lach%')
     outputs <- paste('"', outputs, '"', sep = "")  
     outputs_listed <- paste(name2paste, outputs, sep = ' -> ', collapse = "\n")
     #cat(outputs_listed)
-    str <- sprintf('%s
+    strng <- sprintf('%s
   %s  [ shape=record, label="{{ { Name | Description } | { %s | %s } }}"] 
   %s', inputs_listed, name2paste, name, desc, outputs_listed
     )
-    cat(str)
+    if(exists("graph")) eval(parse(text =
+                                   sprintf('strng <- paste(%s, strng, "\n")', graph, graph)
+                             ))
+    cat(strng)
+    return(strng)
   }
   }
   
